Automatischen Übersetzungs-Retry und Kontextmenü

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -265,6 +265,16 @@
         </div>
     </div>
 
+    <!-- Auto-Übersetzungs-Menü -->
+    <div class="context-menu" id="autoTransMenu">
+        <div class="context-menu-item" onclick="autoTransMenuAction('line')">
+            <span>🔁</span> Übersetzung für diese Zeile
+        </div>
+        <div class="context-menu-item" onclick="autoTransMenuAction('all')">
+            <span>🔁</span> Übersetzung für alle Zeilen
+        </div>
+    </div>
+
     <!-- Project Context Menu -->
     <div class="context-menu" id="projectContextMenu">
         <div class="context-menu-item" onclick="projectMenuAction('edit')">
