--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -125,6 +125,8 @@
                     <button id="copyAssistantButton" class="btn btn-secondary">Kopierhilfe</button>
                     <button id="copyAssistant2Button" class="btn btn-secondary">Kopierhilfe 2</button>
                     <button id="copyAllEmosButton" class="btn btn-secondary">Emotionen kopieren</button>
+                    <label class="copy-option"><input type="checkbox" id="copyIncludeTime" checked> Zeit voranstellen</label>
+                    <label class="copy-option"><input type="checkbox" id="copyAddDashes"> --- anhängen</label>
                 </div>
                 <div class="sort-controls">
                     <span style="color: #999;">Sortierung:</span>
