--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -25,6 +25,10 @@
         <span id="errorBannerMessage"></span>
         <button id="errorBannerRetry">Erneut versuchen</button>
     </div>
+    <!-- Knopf zur Migration der LocalStorage-Daten in das neue Dateiformat -->
+    <button id="migration-button" onclick="startMigration()">Migration starten</button>
+    <!-- Ausgabebereich für Fortschrittsmeldungen der Migration -->
+    <div id="migration-status"></div>
     <div class="container">
         <!-- Sidebar -->
         <aside class="sidebar">
@@ -941,9 +945,11 @@
     <!-- Verlinkung zur aktuellen Version -->
     <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.40.127</a>
 
-    <script src="src/colorUtils.js"></script>
-    <script src="src/main.js"></script>
-    <script type="module" src="renderer.js"></script>
+     <script src="src/colorUtils.js"></script>
+     <script src="src/fileStorage.js"></script>
+     <script src="src/migrationUI.js"></script>
+     <script src="src/main.js"></script>
+     <script type="module" src="renderer.js"></script>
 </body>
 </html>
 
