OPFS-Migration wieder laden

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -66,6 +66,7 @@
                     <button id="devToolsButton" class="btn btn-secondary" onclick="toggleDevTools()">🐞 DevTools</button>
                     <button class="btn btn-secondary" onclick="openDubbingLog()">📝 Protokoll</button>
                     <button class="btn btn-secondary" onclick="startMigration()">Migration starten</button>
+                    <button class="btn btn-secondary" onclick="loadMigration()">Migration laden</button>
                     <div id="migration-status"></div>
                 </div>
             </div>
