--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -67,6 +67,7 @@
                     <button class="btn btn-secondary" onclick="openDubbingLog()">📝 Protokoll</button>
                     <button class="btn btn-secondary" onclick="startMigration()">Migration starten</button>
                     <button class="btn btn-secondary" onclick="loadMigration()">Migration laden</button>
+                    <button class="btn btn-secondary" onclick="migrateData()">Daten migrieren</button>
                     <div id="migration-status"></div>
                 </div>
             </div>
