Anzeige und Wechsel des Speichermodus

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -68,6 +68,8 @@
                     <button class="btn btn-secondary" onclick="startMigration()">Migration starten</button>
                     <button class="btn btn-secondary" onclick="loadMigration()">Migration laden</button>
                     <button class="btn btn-secondary" onclick="migrateData()">Daten migrieren</button>
+                    <span id="storageModeIndicator"></span>
+                    <button id="switchStorageButton" class="btn btn-secondary">...</button>
                     <div id="migration-status"></div>
                 </div>
             </div>
