feat: visuelles speicherlabel pro datei

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -204,6 +204,7 @@
         <th width="50" title="Doppelklick auf Nummer um Position zu ändern">#</th>
         <th class="sortable">Dateiname</th>
         <th class="sortable">Ordner</th>
+        <th width="40" title="Speicherort">Speicher</th>
         <th width="60"><div class="version-score-header">Version<br>Score</div></th>
         <th>EN/DE Text</th>
         <th width="50">UT-Suche</th>
