Knopf zum Öffnen des neuen Speicherordners

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -70,6 +70,7 @@
                     <button class="btn btn-secondary" onclick="migrateData()">Daten migrieren</button>
                     <span id="storageModeIndicator"></span>
                     <button id="switchStorageButton" class="btn btn-secondary">...</button>
+                    <button id="openStorageFolderButton" class="btn btn-secondary" onclick="openStorageFolder()">📂 Speicherordner</button>
                     <div id="migration-status"></div>
                 </div>
             </div>
