Projektanalyse per Kontextmenü

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -307,6 +307,9 @@
         <div class="context-menu-item" onclick="projectMenuAction('edit')">
             <span>⚙️</span> Projekt bearbeiten
         </div>
+        <div class="context-menu-item" onclick="projectMenuAction('analyze')">
+            <span>🔍</span> Projekt analysieren
+        </div>
         <div class="context-menu-item danger" onclick="projectMenuAction('delete')">
             <span>🗑️</span> Projekt löschen
         </div>
