Füge Debug-Bericht-Knopf hinzu

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -64,6 +64,7 @@
                         </div>
                     </div>
                     <button id="devToolsButton" class="btn btn-secondary" onclick="toggleDevTools()">🐞 DevTools</button>
+                    <button class="btn btn-secondary" onclick="exportDebugReport()">📋 Debug-Bericht</button>
                     <button class="btn btn-secondary" onclick="openDubbingLog()">📝 Protokoll</button>
                     <button class="btn btn-secondary" onclick="startMigration()">Migration starten</button>
                     <button class="btn btn-secondary" onclick="loadMigration()">Migration laden</button>
