Füge sichere Projekt- und Speicherumschaltung hinzu

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -964,6 +964,7 @@
     <script src="src/colorUtils.js"></script>
     <script src="src/fileStorage.js"></script>
     <script src="src/migrationUI.js"></script>
+    <script src="src/projectSwitch.js"></script>
     <script src="src/main.js"></script>
     <script type="module" src="renderer.js"></script>
 </body>
