docs: changelog korrigiert

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -745,7 +745,8 @@
                 </div>
                 <div class="effect-actions">
                     <button id="radioEffectBoxBtn" class="effect-btn" onclick="applyRadioEffect()" title="Funkgerät-Effekt anwenden">Funkgerät-Effekt anwenden</button>
-                    <button class="btn-reset-settings" onclick="resetRadioSettings()" title="Funkgeräteinstellungen zurücksetzen">⟳ Standardwerte</button>
+                    <!-- Setzt nur diesen Effekt zurück -->
+                    <button class="btn-reset-settings" onclick="resetRadioSettings()" title="Setzt nur diesen Effekt zurück">⟳ Standardwerte</button>
                 </div>
             </fieldset>
             <fieldset class="effect-group">
@@ -762,7 +763,8 @@
                         <input type="number" id="hallDelay" min="0" max="500" step="10">
                     </label>
                 </div>
-                <button class="btn-reset-settings" onclick="resetHallSettings()" title="Hall-Effekt zurücksetzen">⟳ Hall-Standardwerte</button>
+                <!-- Setzt nur diesen Effekt zurück -->
+                <button class="btn-reset-settings" onclick="resetHallSettings()" title="Setzt nur diesen Effekt zurück">⟳ Standardwerte</button>
             </fieldset>
             <fieldset class="effect-group">
                 <legend>⚡ EM-Störgeräusch</legend>
@@ -773,7 +775,8 @@
                 </div>
                 <div class="effect-actions">
                     <button id="emiEffectBoxBtn" class="effect-btn" onclick="applyEmiEffect()" title="EM-Störgeräusch anwenden">EM-Störgeräusch anwenden</button>
-                    <button class="btn-reset-settings" onclick="resetEmiSettings()" title="EM-Störgeräusch zurücksetzen">⟳ Standardwerte</button>
+                    <!-- Setzt nur diesen Effekt zurück -->
+                    <button class="btn-reset-settings" onclick="resetEmiSettings()" title="Setzt nur diesen Effekt zurück">⟳ Standardwerte</button>
                 </div>
             </fieldset>
                 </div> <!-- edit-right Ende -->
