Validierung und ESC-Handler ergänzt

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -652,7 +652,7 @@
                                 <option value="end">Ende</option>
                             </select>
                         </label>
-                        <button class="btn btn-secondary" onclick="insertEnglishSegment()" title="Markierten EN-Abschnitt in DE-Audio kopieren">⬇️ Kopieren</button>
+                        <button id="copyEnBtn" class="btn btn-secondary" onclick="insertEnglishSegment()" title="Markierten EN-Abschnitt in DE-Audio kopieren">⬇️ Kopieren</button>
                     </div>
                 </div>
                 <div style="display:flex;flex-direction:column;gap:5px;margin-top:10px;">
