--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -665,32 +665,25 @@
                 </div>
             </div>
             <div class="edit-flex">
-                <div class="edit-left">
-                    <div class="edit-range">
-                        <label>Start (ms): <input type="number" id="editStart" value="0" step="100"></label>
-                        <label>Ende (ms): <input type="number" id="editEnd" value="0" step="100"></label>
+                <!-- Bereich: Timing & Bereiche -->
+                <div class="timing-grid">
+                    <!-- Karte Trimmen -->
+                    <div class="timing-card trim-card">
+                        <h4>Trimmen</h4>
+                        <div class="trim-fields">
+                            <div class="field">
+                                <label for="editStart">Start (ms)</label>
+                                <div class="input-unit"><input type="number" id="editStart" value="0" step="100"><span class="unit">ms</span></div>
+                            </div>
+                            <div class="field">
+                                <label for="editEnd">Ende (ms)</label>
+                                <div class="input-unit"><input type="number" id="editEnd" value="0" step="100"><span class="unit">ms</span></div>
+                            </div>
+                        </div>
                         <button id="autoTrimBtn" class="copy-btn" title="Stille automatisch erkennen">Auto</button>
                     </div>
-                    <div class="trim-options">
-                        <label title="Längere Pausen automatisch entfernen"><input type="checkbox" id="autoIgnoreChk"> Pausen &gt; <input type="number" id="autoIgnoreMs" value="400" step="100" style="width:70px;"> ms entfernen</label>
-                    </div>
-                    <div class="stretch-options">
-                        <label title="Passt die Geschwindigkeit des DE-Audios an"><input type="checkbox" id="autoTempoChk"> Tempo automatisch an EN anpassen</label>
-                        <label class="tempo-control">Tempo:
-                            <button id="tempoMinusBtn" class="copy-btn" title="Tempo in kleinen Schritten verringern">➖</button>
-                            <input type="range" id="tempoRange" min="1" max="3" step="0.01" value="1" title="Aktuelles Wiedergabetempo">
-                            <button id="tempoPlusBtn" class="copy-btn" title="Tempo in kleinen Schritten erhöhen">➕</button>
-                            <span id="tempoDisplay">1.00</span>
-                        </label>
-                        <button id="tempoAutoBtn" class="copy-btn" title="Tempo auf Minimum setzen und anpassen">Auto</button>
-                        <button id="tempoAutoResetBtn" class="copy-btn" title="Tempo auf gespeicherten Wert zurücksetzen">Auto</button>
-                        <span id="tempoInfo" style="margin-left:10px;"></span>
-                    </div>
-                    <button class="btn btn-secondary" id="autoAdjustBtn" style="margin-top:5px;" title="Pausen kürzen und Tempo angleichen">🎯 Anpassen &amp; Anwenden</button>
-                </div>
-                <!-- Mittlere Spalte für Ignorier- und Stillebereiche -->
-                <div class="edit-center">
-                    <div class="ignore-container">
+                    <!-- Karte Ignorierbereiche -->
+                    <div class="timing-card ignore-card">
                         <h4>Ignorierbereiche</h4>
                         <div id="ignoreList"></div>
                         <div class="ignore-buttons">
@@ -698,7 +691,13 @@
                             <button class="btn btn-secondary" onclick="adjustIgnoreRanges(50)" title="Ignorierbereich verlängern">Länger ▶</button>
                         </div>
                     </div>
-                    <div class="ignore-container">
+                    <!-- Karte Pausen entfernen -->
+                    <div class="timing-card pause-card">
+                        <h4>Pausen entfernen</h4>
+                        <label class="checkbox-line" title="Längere Pausen automatisch entfernen"><input type="checkbox" id="autoIgnoreChk"> Pausen &gt; <span class="input-unit"><input type="number" id="autoIgnoreMs" value="400" step="100" style="width:70px;"><span class="unit">ms</span></span> entfernen</label>
+                    </div>
+                    <!-- Karte Stille-Bereiche -->
+                    <div class="timing-card silence-card">
                         <h4>Stille-Bereiche</h4>
                         <div id="silenceList"></div>
                         <div class="ignore-buttons">
@@ -706,6 +705,25 @@
                             <button class="btn btn-secondary" onclick="adjustSilenceRanges(50)" title="Stillebereich verlängern">Länger ▶</button>
                         </div>
                     </div>
+                    <!-- Karte Tempo -->
+                    <div class="timing-card tempo-card">
+                        <h4>Tempo</h4>
+                        <label class="checkbox-line" title="Passt die Geschwindigkeit des DE-Audios an"><input type="checkbox" id="autoTempoChk"> Tempo automatisch an EN anpassen</label>
+                        <div class="tempo-row">
+                            <span class="tempo-icon">⏱️</span>
+                            <button id="tempoMinusBtn" class="copy-btn" title="Tempo in kleinen Schritten verringern">➖</button>
+                            <input type="range" id="tempoRange" min="1" max="3" step="0.01" value="1" title="Aktuelles Wiedergabetempo">
+                            <button id="tempoPlusBtn" class="copy-btn" title="Tempo in kleinen Schritten erhöhen">➕</button>
+                            <span id="tempoDisplay" class="tempo-value">1.00</span>
+                        </div>
+                        <div class="tempo-auto">
+                            <button id="tempoAutoBtn" class="copy-btn" title="Tempo auf Minimum setzen und anpassen">Auto</button>
+                            <button id="tempoAutoResetBtn" class="copy-btn" title="Tempo auf gespeicherten Wert zurücksetzen">Auto</button>
+                            <span id="tempoInfo"></span>
+                        </div>
+                    </div>
+                    <!-- Button Anpassen & Anwenden -->
+                    <button class="btn btn-secondary" id="autoAdjustBtn" title="Pausen kürzen und Tempo angleichen">🎯 Anpassen &amp; Anwenden</button>
                 </div>
                 <!-- Rechte Spalte für Effekt-Einstellungen -->
                 <div class="edit-right">
