--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -802,14 +802,21 @@
                     <button class="btn-reset-settings" onclick="resetEmiSettings()" title="Setzt nur diesen Effekt zurück">⟳ Standardwerte</button>
                 </div>
             </fieldset>
-                </div> <!-- edit-right Ende -->
-            </div> <!-- edit-flex Ende -->
+            <fieldset class="effect-group">
+                <legend>🚪 Nebenraum-Effekt</legend>
+                <div class="effect-actions">
+                    <button id="neighborEffectBoxBtn" class="effect-btn" onclick="applyNeighborEffect()" title="Nebenraum-Effekt anwenden">Nebenraum-Effekt anwenden</button>
+                </div>
+            </fieldset>
+            </div> <!-- edit-right Ende -->
+        </div> <!-- edit-flex Ende -->
 
             <!-- Untere Leiste: Effekt-Toolbar links, Aktionen rechts -->
             <div class="edit-bottom">
                 <div class="effect-toolbar">
                     <button id="radioEffectBtn" class="effect-btn" onclick="applyRadioEffect()" title="Funkgerät-Effekt anwenden">📻 Funkgerät-Effekt anwenden</button>
                     <button id="emiEffectBtn" class="effect-btn" onclick="applyEmiEffect()" title="EM-Störgeräusch anwenden">⚡ EM-Störgeräusch anwenden</button>
+                    <button id="neighborEffectBtn" class="effect-btn" onclick="applyNeighborEffect()" title="Nebenraum-Effekt anwenden">🚪 Nebenraum-Effekt anwenden</button>
                     <button id="volumeMatchBtn" class="effect-btn" onclick="applyVolumeMatch()" title="Lautstärke an EN anpassen">🔊 Lautstärke angleichen</button>
                 </div>
                 <div class="dialog-buttons">
