Optionalen Hall für Nebenraum-Effekt

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -804,6 +804,7 @@
             </fieldset>
             <fieldset class="effect-group">
                 <legend>🚪 Nebenraum-Effekt</legend>
+                <label id="neighborHallToggleLabel" class="effect-toggle" title="Hall zum Nebenraum-Effekt hinzufügen"><input type="checkbox" id="neighborHallToggle" onchange="toggleNeighborHall(this.checked)"> Hall hinzufügen</label>
                 <div class="effect-actions">
                     <button id="neighborEffectBoxBtn" class="effect-btn" onclick="applyNeighborEffect()" title="Nebenraum-Effekt anwenden">Nebenraum-Effekt anwenden</button>
                 </div>
