DE-Editor zeigt EN-Originalzeit

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -724,7 +724,7 @@
                         <div class="tempo-auto">
                             <button id="tempoAutoBtn" class="copy-btn" title="Tempo auf Minimum setzen und anpassen">Auto</button>
                             <button id="tempoAutoResetBtn" class="copy-btn" title="Tempo auf gespeicherten Wert zurücksetzen">Auto</button>
-                            <span id="tempoInfo"></span>
+                            <span id="tempoInfo"></span><span id="tempoEnInfo"></span>
                         </div>
                     </div>
                     <!-- Button Anpassen & Anwenden -->
