feat: verbessere Tempo-Auto-Knöpfe

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -722,8 +722,8 @@
                             <span id="tempoDisplay" class="tempo-value">1.00</span>
                         </div>
                         <div class="tempo-auto">
-                            <button id="tempoAutoBtn" class="copy-btn" title="Tempo auf Minimum setzen und anpassen">Auto</button>
-                            <button id="tempoAutoResetBtn" class="copy-btn" title="Tempo auf gespeicherten Wert zurücksetzen">Auto</button>
+                            <button id="tempoAutoBtn" class="copy-btn" title="Tempo auf Minimum setzen">Auto</button>
+                            <button id="tempoAutoMatchBtn" class="copy-btn" title="Tempo automatisch auf EN-Zeit anpassen">Auto</button>
                             <span id="tempoInfo"></span><span id="tempoEnInfo"></span>
                         </div>
                     </div>
