Reste-Modus für GPT-Bewertungen

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -149,6 +149,7 @@
                     <button id="copyAssistant2Button" class="btn btn-secondary">Kopierhilfe 2</button>
                     <button id="copyAllEmosButton" class="btn btn-secondary">Emotionen kopieren</button>
                     <button id="subtitleSearchAllButton" class="btn btn-secondary" title="Sucht fehlende deutsche Texte im gesamten Projekt">UT-Suche alles</button>
+                    <label class="copy-option"><input type="checkbox" id="restTranslationCheckbox"> Reste-Modus</label>
                     <label class="copy-option"><input type="checkbox" id="copyIncludeTime" checked> Zeit voranstellen</label>
                     <label class="copy-option"><input type="checkbox" id="copyAddDashes"> --- anhängen</label>
                 </div>
