fix: hook up dev and debug buttons

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -70,8 +70,8 @@
                             <div class="settings-item" onclick="repairProjectFolders()">🔧 Ordner reparieren</div>
                         </div>
                     </div>
-                    <button id="devToolsButton" class="btn btn-secondary" onclick="toggleDevTools()">🐞 DevTools</button>
-                    <button class="btn btn-secondary" onclick="exportDebugReport()">📋 Debug-Bericht</button>
+                    <button id="devToolsButton" class="btn btn-secondary">🐞 DevTools</button>
+                    <button id="debugReportButton" class="btn btn-secondary">📋 Debug-Bericht</button>
                     <button class="btn btn-secondary" onclick="openDubbingLog()">📝 Protokoll</button>
                     <button class="btn btn-secondary" onclick="startMigration()">Migration starten</button>
                     <button class="btn btn-secondary" onclick="loadMigration()">Migration laden</button>
