feat: Debug-Bericht pro Level

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -332,6 +332,9 @@
         <div class="context-menu-item" onclick="levelMenuAction('quickProject')">
             <span>➕</span> Schnellprojekt
         </div>
+        <div class="context-menu-item" onclick="levelMenuAction('exportDebug')">
+            <span>🐞</span> Debug-Bericht exportieren
+        </div>
         <div class="context-menu-item danger" onclick="levelMenuAction('delete')">
             <span>🗑️</span> Level löschen
         </div>
