feat: zufallsprojekt-knopf mit protokoll

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -56,6 +56,7 @@
                     <button class="btn btn-secondary" onclick="showFolderBrowser()">📁 Ordner durchsuchen</button>
                 </div>
                 <div class="system-tools">
+                    <button id="randomProjectButton" class="btn btn-secondary">🎲 Zufallsprojekt</button>
                     <button id="wordListButton" class="btn btn-secondary" onclick="openWordList()">📚 Wörter</button>
                     <div class="settings-container">
                         <button id="settingsButton" class="btn btn-secondary" onclick="toggleSettingsMenu()">⚙️ Einstellungen</button>
