Bericht-Knopf im Ordner-Browser

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -460,6 +460,7 @@
             <div class="folder-files-view" id="folderFilesView"></div>
             
             <div class="dialog-buttons">
+                <button class="btn btn-secondary" onclick="copyFolderReport()">Bericht</button>
                 <button class="btn btn-secondary" onclick="closeFolderBrowser()">Schließen</button>
             </div>
         </div>
