Start-Presets für Spielstart-Leiste

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -120,9 +120,14 @@
                     </div>
                 </div>
             </div>
-			
-<!-- =========================== PROJECT META BAR START =========================== -->
-<div class="project-meta-bar" id="projectMetaBar" style="display:none;">
+            <div class="start-preset-bar">
+                <select id="startPresetSelect"></select>
+                <button id="saveStartPresetBtn" class="btn btn-secondary">Speichern</button>
+                <button id="loadStartPresetBtn" class="btn btn-secondary">Laden</button>
+            </div>
+
+            <!-- =========================== PROJECT META BAR START =========================== -->
+            <div class="project-meta-bar" id="projectMetaBar" style="display:none;">
     <span class="meta-project" id="metaProjectName"></span>
     <span class="meta-label">| Level:</span>
     <span id="metaLevelName"></span>
