EM-Störgeräusch-Presets

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -835,6 +835,11 @@
                         </select>
                     </label>
                 </div>
+                <div class="radio-preset">
+                    <select id="emiPresetSelect" title="Gespeicherte Presets"></select>
+                    <button id="saveEmiPresetBtn" type="button" title="Aktuelle Einstellungen speichern">💾 Speichern</button>
+                    <button id="deleteEmiPresetBtn" type="button" title="Gewähltes Preset löschen">🗑 Löschen</button>
+                </div>
                 <div class="effect-actions">
                     <button id="emiEffectBoxBtn" class="effect-btn" onclick="applyEmiEffect()" title="EM-Störgeräusch anwenden">EM-Störgeräusch anwenden</button>
                     <!-- Setzt nur diesen Effekt zurück -->
