Teile Projektstatistik-Logik zwischen Browser und Tests

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -1084,6 +1084,7 @@
     <script src="src/migrationUI.js"></script>
     <script src="src/projectHelpers.js"></script>
     <script src="src/projectSwitch.js"></script>
+    <script src="src/calculateProjectStats.js"></script>
     <script src="src/main.js"></script>
     <script type="module" src="renderer.js"></script>
 </body>
