Verbessere Wiedergabebedienung im DE-Editor

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -666,8 +666,8 @@
                             </div>
                         </div>
                         <div class="wave-buttons">
-                            <button id="playOrigPreview" class="de-play-btn" onclick="playOriginalPreview()" title="Original abspielen">▶</button>
-                            <button class="de-stop-btn" onclick="stopEditPlayback()" title="Wiedergabe stoppen">⏹</button>
+                            <button id="playOrigPreview" class="de-play-btn" onclick="playOriginalPreview()" title="Original abspielen" aria-label="Original abspielen">▶</button>
+                            <button class="de-stop-btn" onclick="stopEditPlayback()" title="Wiedergabe stoppen" aria-label="Wiedergabe stoppen">⏹</button>
                         </div>
                     </div>
                     <!-- EN-Text unter der Original-Welle -->
@@ -698,8 +698,8 @@
                             </div>
                         </div>
                         <div class="wave-buttons">
-                            <button id="playDePreview" class="de-play-btn" onclick="playDePreview()" title="DE-Vorschau abspielen">▶</button>
-                            <button class="de-stop-btn" onclick="stopEditPlayback()" title="Wiedergabe stoppen">⏹</button>
+                            <button id="playDePreview" class="de-play-btn" onclick="playDePreview()" title="DE-Vorschau abspielen" aria-label="DE-Vorschau abspielen">▶</button>
+                            <button class="de-stop-btn" onclick="stopEditPlayback()" title="Wiedergabe stoppen" aria-label="Wiedergabe stoppen">⏹</button>
                         </div>
                     </div>
                     <!-- DE-Text und Emotional-Text unter der Bearbeitungs-Welle -->
