Reduziere Standardhöhe der Waveform

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -646,8 +646,8 @@
                 </div>
                 <div class="wave-slider">
                     <label for="waveHeightRange">Höhe</label>
-                    <input type="range" id="waveHeightRange" min="60" max="200" step="10">
-                    <span id="waveHeightDisplay">100px</span>
+                    <input type="range" id="waveHeightRange" min="60" max="200" step="10" value="80">
+                    <span id="waveHeightDisplay">80px</span>
                 </div>
                 <label class="wave-sync-label"><input type="checkbox" id="waveSyncScroll"> Scroll koppeln</label>
                 <div class="wave-toolbar-buttons">
