Gestalte Schnellzugriff als flaches Icon-Band

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -716,23 +716,23 @@
                             <p class="quick-subheadline">Die wichtigsten Schritte stehen als kompakte Buttons bereit und markieren beim Klick die passenden Detailbereiche.</p>
                         </div>
                         <div class="quick-toolbar" role="toolbar" aria-label="Schnellzugriffswerkzeuge">
-                            <button id="quickFocusTrim" class="quick-btn" type="button" title="Trimmbereiche bearbeiten" aria-label="Trimmbereiche bearbeiten">
+                            <button id="quickFocusTrim" class="quick-btn quick-btn--label" type="button" title="Trimmbereiche bearbeiten" aria-label="Trimmbereiche bearbeiten">
                                 <span class="quick-icon" aria-hidden="true">✂️</span>
                                 <span class="quick-text">Trim</span>
                             </button>
-                            <button id="quickAutoTrim" class="quick-btn" type="button" title="Stille automatisch erkennen" aria-label="Stille automatisch erkennen">
+                            <button id="quickAutoTrim" class="quick-btn quick-btn--label" type="button" title="Stille automatisch erkennen" aria-label="Stille automatisch erkennen">
                                 <span class="quick-icon" aria-hidden="true">⚡</span>
                                 <span class="quick-text">Auto</span>
                             </button>
-                            <button id="quickTempoMatch" class="quick-btn" type="button" title="Tempo automatisch auf EN-Zeit anpassen" aria-label="Tempo automatisch auf EN-Zeit anpassen">
+                            <button id="quickTempoMatch" class="quick-btn quick-btn--label" type="button" title="Tempo automatisch auf EN-Zeit anpassen" aria-label="Tempo automatisch auf EN-Zeit anpassen">
                                 <span class="quick-icon" aria-hidden="true">⏱️</span>
                                 <span class="quick-text">Tempo</span>
                             </button>
-                            <button id="quickVolumeMatch" class="quick-btn" type="button" title="Lautstärke an EN anpassen" aria-label="Lautstärke an EN anpassen">
+                            <button id="quickVolumeMatch" class="quick-btn quick-btn--label" type="button" title="Lautstärke an EN anpassen" aria-label="Lautstärke an EN anpassen">
                                 <span class="quick-icon" aria-hidden="true">🔊</span>
                                 <span class="quick-text">Pegel</span>
                             </button>
-                            <button id="quickRadioEffect" class="quick-btn" type="button" title="Funkgerät-Effekt anwenden" aria-label="Funkgerät-Effekt anwenden">
+                            <button id="quickRadioEffect" class="quick-btn quick-btn--label" type="button" title="Funkgerät-Effekt anwenden" aria-label="Funkgerät-Effekt anwenden">
                                 <span class="quick-icon" aria-hidden="true">📻</span>
                                 <span class="quick-text">Funk</span>
                             </button>
